# DLLCreator

./: .gitignore  README.md
DLLCreator/: CMakeLists.txt  DLLCreator.sln  DLLCreator.vcxproj  DLLCreator.vcxproj.filters  License.txt  README.txt  Test.txt  Test0.txt  Test1.txt  main.cpp
DLLCreator/DLLCreator/: CMakeLists.txt  DLLCreator.cpp  DLLCreator.h
DLLCreator/Resources/: CMakeRootPreset.txt  CMakeSubDirectoryCppPreset.txt  CMakeSubDirectoryDLLPreset.txt  CMakeSubDirectoryHeaderPreset.txt  CMakeSubDirectoryInterfacePreset.txt  CMakeSubDirectoryLibPreset.txt
DLLCreator/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
